@@ -1,3 +1,8 @@
+2004-08-02 [christoph]
+
+	* src/viewer.c
+		remove gtk_widget_ref()s
+
 2004-07-30 [christoph]
 
 	* src/viewer.c
